# stray-id

./: .env_template  .gitignore  flake.nix  pyproject.toml
src/stray_id/: __init__.py  states.py
src/stray_id/handlers/: feed.py  identify.py  lost.py  menu.py  profile.py  register.py  start.py
src/stray_id/keyboards/: dog_card.py  features.py  main_menu.py
src/stray_id/locales/: __init__.py  kg.py  ru.py
src/stray_id/models/: dog.py  user.py
src/stray_id/search/: mock.py  service.py
src/stray_id/storage/: memory.py
src/stray_id/utils/: geo.py
